# GitHub-Rock

./: .gitignore  IMPLEMENTATION_STATUS.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  TERMS.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
.github/: release-request.json  release-signing-cert.sha256
.github/workflows/: android-build.yml  android-ci.yml  cross-platform-build.yml  deploy-marketplace-webhook.yml  pages.yml  release.yml  webhook-worker-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: BACKEND_CONNECTION.md  CROSS_PLATFORM_DISTRIBUTION.md  GITHUB_AUTH_AND_SIGNING.md  KOMI_INSPIRED_REBUILD.md  MARKETPLACE_LISTING.md  VERCEL_CONNECT_GITHUB.md
gradle/: libs.versions.toml
site/: 404.html  index.html  manifest.webmanifest  sw.js
site/assets/: app.js  styles.css
site/privacy-policy/: index.html
site/terms/: index.html
tools/release/: collect-desktop-artifacts.mjs  extract-apksigner-cert-sha256.sh  package-arch.sh  set-companion-version.mjs  test-cross-platform-config.mjs  test-extract-apksigner-cert-sha256.sh  write-checksums.mjs
tools/web/: test-pwa-installability.mjs
webhook-worker/: README.md  package.json  wrangler.toml
webhook-worker/src/: index.js
webhook-worker/test/: index.test.js
(+211 files in other folders)
