[package]
name = "github-rock-companion"
version = "0.2.2"
description = "Installable cross-platform companion for GitHub Rock"
authors = ["Sayanth Rock"]
license = "MIT"
repository = "https://github.com/Sayanthrock-Developer/GitHub-Rock"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "github_rock_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
